[tool.poetry]
name = "eshop"
version = "0.1.0"
description = "EShop is an online shopping platform."
authors = ["huangkai <h1770360848@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.19"
pydantic = "^2.1.1"
fastapi = "^0.100.1"
dependency-injector = "^4.41.0"
alembic = "^1.11.2"
pymysql = "^1.1.0"
uvicorn = {version = "^0.23.2", extras = ["standard"]}
loguru = "^0.7.0"
pydantic-settings = "^2.0.2"
python-dotenv = "^1.0.0"
protobuf = "^4.23.4"
grpcio-tools = "^1.56.2"
cryptography = "^41.0.3"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
pytest = "^7.2.2"
coverage = "^7.2.2"
pytest-mypy-plugins = "^2.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.17"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target-version = ['py39']
skip-string-normalization = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = true


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
